# sharpener-cli

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: command.cpp  command.h  main.cpp  ops.cpp  ops.h
